--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vscode-textmate": "2.3.1",
     "winreg": "1.2.0",
     "xterm": "git+https://github.com/Tyriar/xterm.js.git#vscode-release/1.8",
-    "yauzl": "2.3.1"
+    "yauzl": "2.3.1",
+    "v8-profiler": "jrieken/v8-profiler#master"
   },
   "devDependencies": {
     "azure-storage": "^0.3.1",
